k8s/test/backend-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 80
      targetPort: 3000
